--- a/frekvens.html
+++ b/frekvens.html
@@ -7,6 +7,7 @@
     <title>Cipher app</title>
     <link rel="stylesheet" type="text/css" href="app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
@@ -27,10 +28,28 @@
       </div>
   <div class="row marketing">
       <div class="col-lg-6"> 
-    <form>Indsæt din tekst:
+    <form>Referencetekst (erstat gerne med selvvalgt tekst):
          <br>
         
-        <textarea class="input" id="frekvenstekst" rows="5" cols="40">Din tekst her</textarea>
+        <textarea class="input" id="frekvenstekst" rows="10" cols="50">Who made the world?
+Who made the swan, and the black bear?
+Who made the grasshopper?
+This grasshopper, I mean-
+the one who has flung herself out of the grass,
+the one who is eating sugar out of my hand,
+who is moving her jaws back and forth instead of up and down-
+who is gazing around with her enormous and complicated eyes.
+Now she lifts her pale forearms and thoroughly washes her face.
+Now she snaps her wings open, and floats away.
+I don't know exactly what a prayer is.
+I do know how to pay attention, how to fall down
+into the grass, how to kneel down in the grass,
+how to be idle and blessed, how to stroll through the fields,
+which is what I have been doing all day.
+Tell me, what else should I have done?
+Doesn't everything die at last, and too soon?
+Tell me, what is it you plan to do
+with your one wild and precious life?</textarea>
         <br><br>            
         <input type="button" onclick="frekvens()" value="Vis frekvens">
     </form>
