Add second barchart

--- a/frekvens.html
+++ b/frekvens.html
@@ -31,7 +31,7 @@
     <form>Referencetekst (erstat gerne med selvvalgt tekst):
          <br>
         
-        <textarea class="input" id="frekvenstekst" rows="10" cols="50">Who made the world?
+        <textarea class="input-ref" id="frekvenstekst" rows="10" cols="50">Who made the world?
 Who made the swan, and the black bear?
 Who made the grasshopper?
 This grasshopper, I mean-
@@ -50,6 +50,7 @@ Tell me, what else should I have done?
 Doesn't everything die at last, and too soon?
 Tell me, what is it you plan to do
 with your one wild and precious life?</textarea>
+        <textarea class="input-crypt" id="krypteret" rows="10" cols="50">xultpaajcxitltlxaarpjhtiwtgxktghidhipxciwtvgtpilpitghlxiwiwtxgqadds</textarea>
         <br><br>            
         <input type="button" onclick="frekvens()" value="Vis frekvens">
     </form>
