Add decryption algorithm

--- a/frekvens.html
+++ b/frekvens.html
@@ -50,7 +50,7 @@ Tell me, what else should I have done?
 Doesn't everything die at last, and too soon?
 Tell me, what is it you plan to do
 with your one wild and precious life?</textarea>
-        <textarea class="input-crypt" id="krypteret" rows="10" cols="50">xultpaajcxitltlxaarpjhtiwtgxktghidhipxciwtvgtpilpitghlxiwiwtxgqadds</textarea>
+        <textarea class="input-crypt" id="krypteret" rows="10" cols="50">Ã¹uÎÄÊuÂÎu»¶É½ºÇuÉ½ºÇºuÄÃuÉ½ºuÈ¶¹u½º¾¼½É_ÊÇÈºu·ÁºÈÈuÂºuÃÄÌuÌ¾É½uÎÄÊÇu»¾ºÇ¸ºuÉº¶ÇÈuuÅÇ¶Î_ÄuÃÄÉu¼Äu¼ºÃÉÁºu¾ÃÉÄuÉ½¶Éu¼ÄÄ¹uÃ¾¼½É_§¶¼ºuÇ¶¼ºu¶¼¶¾ÃÈÉuÉ½ºu¹Î¾Ã¼uÄ»uÉ½ºuÁ¾¼½É</textarea>
         <br><br>            
         <input type="button" onclick="frekvens()" value="Vis frekvens">
     </form>
